Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
11.8, 12.2(EOL)
-
Unexpected results
-
CREATE TABLE t SELECT vec_fromtext(...) now correctly creates the column as a VECTOR TYPE. Contribution thanks to Abhishek Bansal.
Description
It would seem logical for Vec_FromText function to produce a vector type result, but it doesn't:
|
bb-11.6-MDEV-32887-vector 4dfa605f405df3bee7142be6bcdc364f5a5e0db3 |
MariaDB [test]> create or replace table t as select vec_fromtext('[1]') as v; |
Query OK, 1 row affected (0.126 sec)
|
Records: 1 Duplicates: 0 Warnings: 0
|
 |
MariaDB [test]> show create table t; |
+-------+---------------------------------------------------------------------------------------------------------------------------+ |
| Table | Create Table | |
+-------+---------------------------------------------------------------------------------------------------------------------------+ |
| t | CREATE TABLE `t` ( |
`v` varbinary(16) DEFAULT NULL |
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_uca1400_ai_ci | |
+-------+---------------------------------------------------------------------------------------------------------------------------+ |
1 row in set (0.000 sec) |
Attachments
Issue Links
- is caused by
-
MDEV-34939 vector search in 11.7
-
- Closed
-