MDEV-35211: Make VEC_FromText return VECTOR type